# parking-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ParkingLotDetector/parking_lot/: colors.py  drawing_utils.py  main.py  motion_detector.py  parking_lot_state.json  parking_lot_state.py  statuses.py
apps/parking_management/: apps.py
client/: build.gradle.kts  settings.gradle.kts
client/app/: build.gradle.kts
client/app/src/androidTest/java/com/example/parqueo_app/: ExampleInstrumentedTest.kt
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/example/parqueo_app/: MainActivity.kt
client/app/src/main/java/com/example/parqueo_app/ui/theme/: Color.kt  Theme.kt  Type.kt
client/app/src/main/res/values/: strings.xml  themes.xml
client/app/src/test/java/com/example/parqueo_app/: ExampleUnitTest.kt
client/gradle/: libs.versions.toml
client/gradle/wrapper/: gradle-wrapper.properties
parking_detection/: admin.py  apps.py  models.py  urls.py  views.py
parking_detection/migrations/: 0001_initial.py
parking_detection/utils/: coordinates_generator.py  detector_manager.py  motion_detector.py
scripts/: test.py
server/: settings.py  urls.py
shared/: colors.py  statuses.py
utils/: drawing.py
